--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
     <body>
       <a href="itms-services://?action=download-manifest&url=https://www.dropbox.com/s/88vneoam5rmy7vc/manifest.plist?dl=0">
-        Download
+        Download the beta
+      </a>
     </body>
     </html>
       
