--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
-      <a href="itms-services://?action=download-manifest&url=https://www.dropbox.com/s/88vneoam5rmy7vc/manifest.plist?dl=0">
-        Download the beta
+      <a href="itms-services://?action=download-manifest&url=https://bertya.github.io/gnote/manifest.plist">
+        Download The Beta!!!
       </a>
     </body>
     </html>
