--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-    <html>
-    <head>
-      <meta charset='utf-8'>
-      <meta name='viewport' content='width=device-width'>
-      <title>Privacy Policy</title>
-      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
-    </head>
-    <body>
-      <a href="itms-services://?action=download-manifest&url=https://bertya.github.io/gnote/manifest.plist">
-        Download The Beta!!!
-      </a>
-    </body>
-    </html>
+<html>
+<head>
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width'>
+  <title>Privacy Policy</title>
+  <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
+</head>
+<body>
+  <div style="text-align: center">
+    <img src='./logo.png'>
+    <h1>Gymmore</h1>
+    <h2>Version 1.0(4)</h2>
+    <p>Thanks for joining the Gymmore test program.</p>
+    <a style="padding: 16px; background: #131313; border-radius: 5px; display: inline-block; color: #ffffff; text-decoration: none;" href="itms-services://?action=download-manifest&url=https://bertya.github.io/gnote/manifest.plist">
+      Download The Alpha
+    </a>
+  </div>
+</body>
+</html>
       
