update logo size

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div style="text-align: center">
-    <img src='./logo.png'>
+    <img src='./logo.png' style="width: 100px;">
     <h1>Gymmore</h1>
     <h2>Version 1.0(4)</h2>
     <p>Thanks for joining the Gymmore test program.</p>
